--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -708,7 +708,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 100%.</source>
-        <target>Los objetos de defensa del almacén aportan un 100% de puntos de defensa adicionales para el pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 2 puntos de defensa adicionales al pueblo.</target>
       </segment>
     </unit>
     <unit id="GLo_FzK" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.">
@@ -718,7 +718,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.</source>
-        <target>Los objetos de defensa del almacén aportan un 150% de puntos de defensa adicionales para el pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 2.5 puntos de defensa adicionales al pueblo.</target>
       </segment>
     </unit>
     <unit id="l3tFIbP" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.">
@@ -728,7 +728,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.</source>
-        <target>Los objetos de defensa del almacén aportan un 200% de puntos de defensa adicionales para el pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 3 puntos de defensa adicionales al pueblo.</target>
       </segment>
     </unit>
     <unit id="FXvZuCC" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.">
@@ -738,7 +738,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.</source>
-        <target>Los objetos de defensa del almacén aportan un 250% de puntos de defensa adicionales para el pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 3.5 puntos de defensa adicionales al pueblo.</target>
       </segment>
     </unit>
     <unit id="fPl.xwk" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.">
@@ -748,7 +748,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.</source>
-        <target>Los objetos de defensa del almacén aportan un 300% de puntos de defensa adicionales para el pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 4 puntos de defensa adicionales al pueblo.</target>
       </segment>
     </unit>
     <unit id="Vln90x5" name="Steinkanone">
@@ -3711,6 +3711,67 @@
       <segment>
         <source>Die Verteidigung der Stadt wird um 10% erhöht.</source>
         <target>La defensa total del pueblo aumenta a 10%.</target>
+      </segment>
+    </unit>
+    <unit id="ds6jhOT" name="Der Verteidigungswert der Stadt steigt mit dem Großen Graben auf 10 Punkte.">
+      <notes>
+        <note category="german">Der Verteidigungswert der Stadt steigt mit dem Großen Graben auf 10 Punkte.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Der Verteidigungswert der Stadt steigt mit dem Großen Graben auf 10 Punkte.</source>
+        <target>La zanja periférica aporta 10 puntos de defensa.</target>
+      </segment>
+    </unit>
+    <unit id="kA.md3H" name="Die entwicklungsfähige Stadtmauer bringt der Stadt 55 Verteidigungspunkte.">
+      <notes>
+        <note category="german">Die entwicklungsfähige Stadtmauer bringt der Stadt 55 Verteidigungspunkte.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Die entwicklungsfähige Stadtmauer bringt der Stadt 55 Verteidigungspunkte.</source>
+        <target>La muralla evolutiva aporta 55 puntos de defensa.</target>
+      </segment>
+    </unit>
+    <unit id="g64XZZx" name="Der Brunnen wird einmalig mit 5 Rationen Wasser befüllt.">
+      <notes>
+        <note category="german">Der Brunnen wird einmalig mit 5 Rationen Wasser befüllt.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Der Brunnen wird einmalig mit 5 Rationen Wasser befüllt.</source>
+        <target>Añade 5 raciones de agua al pozo (una sola vez).</target>
+      </segment>
+    </unit>
+    <unit id="11k2wgK">
+      <notes>
+        <note category="german">Jeder in der Bank abgelegte Verteidigungsgegenstand bringt der Stadt 1.5 Verteidigungspunkte zusätzlich ein.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Jeder in der Bank abgelegte Verteidigungsgegenstand bringt der Stadt 1.5 Verteidigungspunkte zusätzlich ein.</source>
+        <target>Cada objeto de defensa en el Almacén aporta 1.5 puntos de defensa adicionales al pueblo.</target>
+      </segment>
+    </unit>
+    <unit id="ry7qbCw">
+      <notes>
+        <note category="german">Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.</source>
+        <target>El pueblo recibirá 1 planos comunes después del ataque</target>
+      </segment>
+    </unit>
+    <unit id="ELKPDDh" name="Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.">
+      <notes>
+        <note category="german">Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</note>
+        <note category="from">db://BuildingPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</source>
+        <target>Los sistemas de riego apportan 70 puntos de defensa.</target>
       </segment>
     </unit>
   </file>
