--- a/translations/buildings+intl-icu.fr.xlf
+++ b/translations/buildings+intl-icu.fr.xlf
@@ -708,7 +708,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 100%.</source>
-        <target>Le bonus des Objets de Défense en banque augmente de 100%.</target>
+        <target>Chaque objet de défense en banque apporte 2 points de défense à la ville.</target>
       </segment>
     </unit>
     <unit id="GLo_FzK" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.">
@@ -718,7 +718,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.</source>
-        <target>Le bonus des Objets de Défense en banque augmente de 150%.</target>
+        <target>Chaque objet de défense en banque apporte 2.5 points de défense à la ville.</target>
       </segment>
     </unit>
     <unit id="l3tFIbP" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.">
@@ -728,7 +728,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.</source>
-        <target>Le bonus des Objets de Défense en banque augmente de 200%.</target>
+        <target>Chaque objet de défense en banque apporte 3 points de défense à la ville.</target>
       </segment>
     </unit>
     <unit id="FXvZuCC" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.">
@@ -738,7 +738,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.</source>
-        <target>Le bonus des Objets de Défense en banque augmente de 250%.</target>
+        <target>Chaque objet de défense en banque apporte 3.5 points de défense à la ville.</target>
       </segment>
     </unit>
     <unit id="fPl.xwk" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.">
@@ -748,7 +748,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.</source>
-        <target>Le bonus des Objets de Défense en banque augmente de 300%.</target>
+        <target>Chaque objet de défense en banque apporte 4 points de défense à la ville.</target>
       </segment>
     </unit>
     <unit id="Vln90x5" name="Steinkanone">
@@ -3711,7 +3711,68 @@
       </notes>
       <segment>
         <source>Die Verteidigung der Stadt wird um 10% erhöht.</source>
-        <target>L'organisation de la défense est optimisée, le gain de la défense total de la ville passe à 10%.</target>
+        <target>L'organisation de la défense est basique, le gain de la défense total de la ville passe à 10%.</target>
+      </segment>
+    </unit>
+    <unit id="ds6jhOT" name="Der Verteidigungswert der Stadt steigt mit dem Großen Graben auf 10 Punkte.">
+      <notes>
+        <note category="german">Der Verteidigungswert der Stadt steigt mit dem Großen Graben auf 10 Punkte.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Der Verteidigungswert der Stadt steigt mit dem Großen Graben auf 10 Punkte.</source>
+        <target>Le Grand fossé apporte 10 points de défense.</target>
+      </segment>
+    </unit>
+    <unit id="kA.md3H" name="Die entwicklungsfähige Stadtmauer bringt der Stadt 55 Verteidigungspunkte.">
+      <notes>
+        <note category="german">Die entwicklungsfähige Stadtmauer bringt der Stadt 55 Verteidigungspunkte.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Die entwicklungsfähige Stadtmauer bringt der Stadt 55 Verteidigungspunkte.</source>
+        <target>La Muraille évolutive apporte 55 points de défense.</target>
+      </segment>
+    </unit>
+    <unit id="g64XZZx" name="Der Brunnen wird einmalig mit 5 Rationen Wasser befüllt.">
+      <notes>
+        <note category="german">Der Brunnen wird einmalig mit 5 Rationen Wasser befüllt.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Der Brunnen wird einmalig mit 5 Rationen Wasser befüllt.</source>
+        <target>Ajoute 5 rations d'eau dans le puits (une seule fois).</target>
+      </segment>
+    </unit>
+    <unit id="11k2wgK">
+      <notes>
+        <note category="german">Jeder in der Bank abgelegte Verteidigungsgegenstand bringt der Stadt 1.5 Verteidigungspunkte zusätzlich ein.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Jeder in der Bank abgelegte Verteidigungsgegenstand bringt der Stadt 1.5 Verteidigungspunkte zusätzlich ein.</source>
+        <target>Chaque objet de défense en banque apporte 1.5 points de défense à la ville.</target>
+      </segment>
+    </unit>
+    <unit id="ry7qbCw">
+      <notes>
+        <note category="german">Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.</note>
+        <note category="from">db://BuildingPrototype</note>
+      </notes>
+      <segment>
+        <source>Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.</source>
+        <target>La ville obtiendra 1 plan commun après l'attaque.</target>
+      </segment>
+    </unit>
+    <unit id="ELKPDDh" name="Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.">
+      <notes>
+        <note category="german">Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</note>
+        <note category="from">db://BuildingPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</source>
+        <target>Les aqua-tourelles apportent 70 points de défense.</target>
       </segment>
     </unit>
   </file>
