--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -3753,7 +3753,7 @@
         <target>Cada objeto de defensa en el Almacén aporta 1.5 puntos de defensa adicionales al pueblo.</target>
       </segment>
     </unit>
-    <unit id="ry7qbCw">
+    <unit id="0O20i7a" name="Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.">
       <notes>
         <note category="german">Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.</note>
         <note category="from">db://BuildingPrototype</note>
@@ -3767,7 +3767,6 @@
       <notes>
         <note category="german">Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</note>
         <note category="from">db://BuildingPrototype</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</source>
