--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4393,5 +4393,27 @@
         <target>Guardar cambios en '{appname}'</target>
       </segment>
     </unit>
+    <unit id="qc1ucL6" name="Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.">
+      <notes>
+        <note category="german">Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.</note>
+        <note category="from">twig:///templates/ajax/admin/towns/distinctions.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.</source>
+        <target>Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.</target>
+      </segment>
+    </unit>
+    <unit id="WJg1nZp" name="Diese Auszeichnung wurde verdient.">
+      <notes>
+        <note category="german">Diese Auszeichnung wurde verdient.</note>
+        <note category="from">twig:///templates/ajax/admin/towns/distinctions.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Diese Auszeichnung wurde verdient.</source>
+        <target>Diese Auszeichnung wurde verdient.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
