--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4411,5 +4411,27 @@
         <target>Änderungen an '{appname}' speichern</target>
       </segment>
     </unit>
+    <unit id="qc1ucL6" name="Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.">
+      <notes>
+        <note category="german">Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.</note>
+        <note category="from">twig:///templates/ajax/admin/towns/distinctions.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Diese Auszeichnung wird nicht verdient, wenn der Bürger heute Nacht stirbt.</source>
+        <target>Ce picto ne sera pas gagné si le citoyen meurt ce soir.</target>
+      </segment>
+    </unit>
+    <unit id="WJg1nZp" name="Diese Auszeichnung wurde verdient.">
+      <notes>
+        <note category="german">Diese Auszeichnung wurde verdient.</note>
+        <note category="from">twig:///templates/ajax/admin/towns/distinctions.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Diese Auszeichnung wurde verdient.</source>
+        <target>Ce picto a été gagné.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
