--- a/translations/buildings+intl-icu.fr.xlf
+++ b/translations/buildings+intl-icu.fr.xlf
@@ -3754,7 +3754,7 @@
         <target>Chaque objet de défense en banque apporte 1.5 points de défense à la ville.</target>
       </segment>
     </unit>
-    <unit id="ry7qbCw">
+    <unit id="0O20i7a" name="Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.">
       <notes>
         <note category="german">Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.</note>
         <note category="from">db://BuildingPrototype</note>
@@ -3768,7 +3768,6 @@
       <notes>
         <note category="german">Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</note>
         <note category="from">db://BuildingPrototype</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</source>
