--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -4219,12 +4219,22 @@
     </unit>
     <unit id="2JRm9.u" name="{num} Seelenpunkte, Platz {rank}">
       <notes>
-        <note category="german">{num} Seelenpunkte, Platz {rank}</note>
+        <note category="german">{num} Seelenpunkte, Platz &lt;b&gt;{rank}&lt;/b&gt;</note>
         <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
       </notes>
       <segment>
         <source>{num} Seelenpunkte, Platz {rank}</source>
         <target><![CDATA[{num} soul points, rank <b>{rank, selectordinal, one {#st} two {#nd} few {#rd} other {#th}}</b>]]></target>
+      </segment>
+    </unit>
+    <unit id="gFzfoeL" name="Zu meinem Eintrag springen">
+      <notes>
+        <note category="german">Zu meinem Eintrag springen</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+      </notes>
+      <segment>
+        <source>Zu meinem Eintrag springen</source>
+        <target>Jump to my entry</target>
       </segment>
     </unit>
   </file>
