FR Translation for find me link

--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4207,7 +4207,7 @@
       </notes>
       <segment>
         <source>Zu meinem Eintrag springen</source>
-        <target>Zu meinem Eintrag springen</target>
+        <target>Aller à ma position</target>
       </segment>
     </unit>
   </file>
