--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4277,5 +4277,16 @@
         <target>¡Recuerda, también debes cerrar sesión en tu cuenta de Eternaltwin!</target>
       </segment>
     </unit>
+    <unit id="TMcIHTT" name="Du kannst deinen Spielernamen erst in {days} Tagen erneut ändern.">
+      <notes>
+        <note category="german">Du kannst deinen Spielernamen erst {days} erneut ändern.</note>
+        <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du kannst deinen Spielernamen erst in {days} Tagen erneut ändern.</source>
+        <target>Du kannst deinen Spielernamen erst in {days} Tagen erneut ändern.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
