Various ES translations for council (and one for global and soul) + typo fix for EN council

--- a/translations/council+intl-icu.en.xlf
+++ b/translations/council+intl-icu.en.xlf
@@ -1297,7 +1297,7 @@
       </notes>
       <segment>
         <source>Es sind die Individuen, die uns mit Sicherheit in den sicheren Tod führen...</source>
-        <target>They're the individual responsible for leading us surely to our certian death...</target>
+        <target>They're the individual responsible for leading us surely to our certain death...</target>
       </segment>
     </unit>
     <unit id="ymQHvdr" name="Die sind wie du? Nur hübscher?">
