--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4281,11 +4281,10 @@
       <notes>
         <note category="german">Du kannst deinen Spielernamen erst {days} erneut ändern.</note>
         <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Du kannst deinen Spielernamen erst in {days} Tagen erneut ändern.</source>
-        <target>Du kannst deinen Spielernamen erst in {days} Tagen erneut ändern.</target>
+        <target>Debes esperar {days} día/s antes de que puedas volver a cambiar tu nombre de nuevo.</target>
       </segment>
     </unit>
   </file>
