--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -16497,7 +16497,17 @@
       </notes>
       <segment>
         <source>Du hast dafür {count} Aktionspunkt(e) verbraucht.</source>
-        <target>Has utilizado {count} punto(s) de acción.</target>
+        <target>
+            {ref__icu, select,
+                on {
+                    {raw_count, plural,
+                        one {Has utilizado {count} punto de acción.}
+                        other {Has utilizado {count} puntos de acción.}
+                    }
+                }
+                other {Has utilizado {count} punto(s) de acción.}
+            }
+            </target>
       </segment>
     </unit>
     <unit id="lo3tdoY" name="Was für eine schreckliche Nacht!">
@@ -26127,6 +26137,37 @@
       <segment>
         <source>{leader} hat {escortee} heldenhaft zurück in die Stadt begleitet!</source>
         <target>¡El valiente {leader} ha acompañado a {escortee} hasta el pueblo!</target>
+      </segment>
+    </unit>
+    <unit id="NJ.jiJV" name="{citizen} bedankt sich herzlich bei dir, dass du ihn nach Hause gebracht hast!">
+      <notes>
+        <note category="german">{citizen} thanks you wholeheartedly for taking them back to the town!</note>
+        <note category="from">php:///src/Controller/BeyondController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>{citizen} bedankt sich herzlich bei dir, dass du ihn nach Hause gebracht hast!</source>
+        <target>{citizen} bedankt sich herzlich bei dir, dass du ihn nach Hause gebracht hast!</target>
+      </segment>
+    </unit>
+    <unit id="Yi60BMa" name="Du hast dafür {count} Baupunkt(e) verbraucht.">
+      <notes>
+        <note category="german">Du hast dafür {count} Baupunkt(e) verbraucht.</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hast dafür {count} Baupunkt(e) verbraucht.</source>
+        <target>{ref__icu, select,
+            on {
+                {raw_count, plural,
+                    one {Has utilizado {count} punto de construcción.}
+                    other {Has utilizado {count} puntos de construcción.}
+                }
+            }
+            other {Has utilizado {count} punto(s) de construcción.}
+        }
+        </target>
       </segment>
     </unit>
   </file>
