--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -16537,7 +16537,15 @@
       </notes>
       <segment>
         <source>Du hast dafür {count} Aktionspunkt(e) verbraucht.</source>
-        <target>{raw_count, plural, one {Vous avez utilisé {count} point d'action.} other {Vous avez utilisé {count} points d'action.}}</target>
+        <target>{ref__icu, select,
+                on {
+                    {raw_count, plural,
+                        one {Vous avez utilisé {count} point d'action.}
+                        other {Vous avez utilisé {count} points d'action.}
+                    }
+                }
+                other {Vous avez utilisé {count} point(s) d'action.}
+            }</target>
       </segment>
     </unit>
     <unit id="lo3tdoY" name="Was für eine schreckliche Nacht!">
@@ -25949,6 +25957,26 @@ cette violente opération...]]></target>
       <segment>
         <source>{citizen} bedankt sich herzlich bei dir, dass du ihn nach Hause gebracht hast!</source>
         <target>Le citoyen {citizen} vous remercie chaleureusement de l'avoir ramené en ville !</target>
+      </segment>
+    </unit>
+    <unit id="Yi60BMa" name="Du hast dafür {count} Baupunkt(e) verbraucht.">
+      <notes>
+        <note category="german">Du hast dafür {count} Baupunkt(e) verbraucht.</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hast dafür {count} Baupunkt(e) verbraucht.</source>
+        <target>{ref__icu, select,
+                on {
+                    {raw_count, plural,
+                        one {Vous avez utilisé {count} point de construction.}
+                        other {Vous avez utilisé {count} points de construction.}
+                    }
+                }
+                other {Vous avez utilisé {count} point(s) de construction.}
+            }
+        </target>
       </segment>
     </unit>
   </file>
