Fix for ES translation (game)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22365,7 +22365,7 @@
       </notes>
       <segment>
         <source>Dieser Bürger gestattet dir nicht auf seine Gegenstände zuzugreifen.</source>
-        <target>Este habitante no te permite acceder a sus artículos.</target>
+        <target>Este habitante no desea que toques sus objetos.</target>
       </segment>
     </unit>
     <unit id="sxHlIDp">
